align not solved

--- a/app/assets/stylesheets/components/_photos-gallery.scss
+++ b/app/assets/stylesheets/components/_photos-gallery.scss
@@ -10,7 +10,7 @@
   }
 
   .photos-projects {
-    width: 220px;
+    width: 200px;
     height: 180px;
     object-fit: cover;
     border-radius: 0px;
